Changelog
=========

9.5-dev - (unreleased)
----------------------
* Feature: improved print css and pdf css. More discreet related items.
  removed floating on generic callout in pdf.
  [demarant refs #18639]
* Upgrade step: Cleanup portal_skins and portal_view_customizations
  marked with eea.design 9.5
  [voineali refs #18987]
* Feature: Update documentByLine look and feel
  [voineali refs #18987]
* Bug fix: Fixed Daviz chart image raw embed within PDF export
  [voineali refs #18910]
* Change: increased the size of the TinyMCE mceListBox
  [ichimdav refs #18785]
* Feature: documented not sortable table unde design elements
  [ghicaale refs #18942]

9.4 - (2014-03-20)
------------------
* Feature: Update document by line viewlet with more info about the authors and
  contributors
  [voineali refs #18987]

9.3 - (2014-03-10)
------------------
* Bug fix: fixed length of the shows characters to 250 and added effectivedate
  [mironovi refs #18430]
* Bug fix: Fixed navigation tabs CSS
  [popesval refs #18728]
* Bug fix: Fixed callout float right not working in PDF
  [voineali refs #18639]
* Bug fix: use user-friendly content type on PDF cover.
  removed issn (not needed).
  [demarant refs #18539]
* Bug fix: Avoid multiple html tags within pdf.cover, pdf.body
  [voineali refs #18552]
* Change: updated print.css stylesheet to work with wkhtmltopdf 0.12
  [voineali refs #18550]
* Change: updated print.css stylesheet with rules from plonetheme.sunburst theme
  [ichimdav refs #18539]
* Bug fix: Use open-source version of "Palatino Linotype" font "TeX Gyre Pagella"
  [voineali refs #17717]
* Change: styled page breaks in the same way as presentational breaks within
  TinyMCE in order to better spot them
  [ichimdav refs #18539]
* Feature: improved PDF generation.
  avoid page break inside images.
  avoid page break just after headings.
  [demarant refs #18539]
* Bug fix: fixed slides from showing up on Windows when using Chrome which
  contained youtube iframes